DBZ-455 Use valueOf instead of constructors